02/11/2025 up to date

--- a/snakefood.default.ini
+++ b/snakefood.default.ini
@@ -7,31 +7,44 @@
 # where = Experiment.name == '202411080959_20241108M182MusLivSenTS2_VMSC02201'
 [Run Info]
 description = 
+where_description = 
 where = 
 
-[A1_Cellpose]
+[A11_Cellpose]
 z_slice = 3
 channel = DAPI
+model_path = 
+alt_path = 
+test_fovs = 150,300,450
 
-[z_AT_test1]
-1 = 1
-2 = clothes
-3 = 1
-4 = test
+[A12_SaveRawScanpy]
+# Leave this section empty: A12 should be completely hands off, will use params from A11
+
+[A21_HarmAnnotation]
+leiden_res = .3
 
 
-[z_BT_test2]
-1 = 1
-2 = clot
-3 = 100
-4 = eric
-5 = cant
-6 = pick
-7 = bad nubmers 
-8 = nospaceshere
 
-[z_CT_test3]
-1 = 1
-2 = 2
-3 = 3
-4 = 4
+; # These tests exist to have something to easily test
+; [z_AT_test1]
+; 1 = 1
+; 2 = clothes
+; 3 = 1
+; 4 = test
+
+
+; [z_BT_test2]
+; 1 = 1
+; 2 = clot
+; 3 = 100
+; 4 = eric
+; 5 = cant
+; 6 = pick
+; 7 = bad nubmers 
+; 8 = nospaceshere
+
+; [z_CT_test3]
+; 1 = 1
+; 2 = 2
+; 3 = 3
+; 4 = 4
