--- a/snakefood.ini
+++ b/snakefood.ini
@@ -1,38 +1,50 @@
 # This section is used to add info that allows this run to be findable in the database after running
 # Will be cleared out upon successful run initiation
 
-# NOTE: for 'where', string processing by ConfigParser is a little odd, so make sure to ONLY put quotes
+# NOTE: for 'where', string processing by ConfigParser is a little odd, so make sure to ONLY put single quotes
 # around the value you would like to compare to, e.g.:
 # 
 # where = Experiment.name == '202411080959_20241108M182MusLivSenTS2_VMSC02201'
 [Run Info]
-description = 
-where = "Metadata.MERFISHExperimentID == 'M182'"
+description = Testing the segmentation of Ultra data
+where_description = Targeted selection of Ultra data
+where = "Experiment.name == '202501311118_BICANTraining_VMSC32010'"
 
-[A1_Cellpose]
+[A11_Cellpose]
 z_slice = 3
 channel = DAPI
+model_path = 
+alt_path = 
+test_fovs = 150,300,450,600
 
-[z_AT_test1]
-1 = 19
-2 = clothes
-3 = 19898123412341234
-4 = test
+[A12_SaveRawScanpy]
+# Leave this section empty: A12 should be completely hands off, will use params from A11
+
+[A21_HarmAnnotation]
+leiden_res = .3
 
 
-[z_BT_test2]
-1 = 7
-2 = clothes
-3 = 700
-4 = zoey
-5 = cant
-6 = pick
-7 = good nubmers 
-8 = spaces here
 
-[z_CT_test3]
-1 = 1
-2 = 2
-3 = 3
-4 = 4
+; # These tests exist to have something to easily test
+; [z_AT_test1]
+; 1 = 1
+; 2 = clothes
+; 3 = 1
+; 4 = test
 
+
+; [z_BT_test2]
+; 1 = 1
+; 2 = clot
+; 3 = 100
+; 4 = eric
+; 5 = cant
+; 6 = pick
+; 7 = bad nubmers 
+; 8 = nospaceshere
+
+; [z_CT_test3]
+; 1 = 1
+; 2 = 2
+; 3 = 3
+; 4 = 4
