--- a/snakefood.default.ini
+++ b/snakefood.default.ini
@@ -9,10 +9,11 @@
 description = 
 where_description = 
 where = 
+qc_path =
 
 [A11_Cellpose]
 z_slice = 3
-channel = DAPI
+channel = [DAPI]
 model_path = 
 alt_path = 
 test_fovs = 150,300,450
@@ -21,6 +22,10 @@ test_fovs = 150,300,450
 # Leave this section empty: A12 should be completely hands off, will use params from A11
 
 [A21_HarmAnnotation]
+ref_path = 
+remove_doublets = True
+min_counts = 5
+min_genes = 3
 leiden_res = .3
 
 
