--- a/snakefood.ini
+++ b/snakefood.ini
@@ -9,6 +9,7 @@
 description = Testing the segmentation of Ultra data
 where_description = Targeted selection of Ultra data
 where = "Experiment.name == '202501311118_BICANTraining_VMSC32010'"
+qc_path = _output/quality_control/
 
 [A11_Cellpose]
 z_slice = 3
@@ -21,6 +22,10 @@ test_fovs = 150,300,450,600
 # Leave this section empty: A12 should be completely hands off, will use params from A11
 
 [A21_HarmAnnotation]
+ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/CerebralCortex1.h5ad,/mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
+remove_doublets = False
+min_counts = 5
+min_genes = 3
 leiden_res = .3
 
 
