major refactor and inplmentation of Path B

--- a/snakefood.ini
+++ b/snakefood.ini
@@ -11,24 +11,29 @@ where_description = Targeted selection of Ultra data
 where = "Experiment.name == '202501311118_BICANTraining_VMSC32010'"
 qc_path = _output/quality_control/
 
-[A11_Cellpose]
+[A1_Cellpose]
 z_slice = 3
-channel = DAPI
+channel = DAPI,PolyT
 model_path = 
 alt_path = 
 test_fovs = 150,300,450,600
 
-[A12_SaveRawScanpy]
+[A2_SaveRawScanpy]
 # Leave this section empty: A12 should be completely hands off, will use params from A11
 
-[A21_HarmAnnotation]
-ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/CerebralCortex1.h5ad,/mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
+[B1_SaveRawScanpy]
+
+[Filter]
 remove_doublets = False
 min_counts = 5
 min_genes = 3
+
+[A4_HarmAnnotation]
+ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/CerebralCortex1.h5ad,/mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
 leiden_res = .3
 
-
+[QC1_postsegqc]
+bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
 
 ; # These tests exist to have something to easily test
 ; [z_AT_test1]
