--- a/snakefood.default.ini
+++ b/snakefood.default.ini
@@ -5,30 +5,62 @@
 # around the value you would like to compare to, e.g.:
 # 
 # where = Experiment.name == '202411080959_20241108M182MusLivSenTS2_VMSC02201'
+; [Run Info]
+; description = 
+; where_description = 
+; where = 
+; qc_path =
+
+; [A1_Cellpose]
+; z_slice = 3
+; channel = [DAPI]
+; model_path = 
+; alt_path = 
+; test_fovs = 150,300,450
+
+; [SaveRawScanpy]
+; # Leave this section empty: A12 should be completely hands off, will use params from A11
+
+; [Preproccessing]
+; remove_doublets = True
+; min_counts = 5
+; min_genes = 3
+
+; [QC]
+; bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
+
 [Run Info]
 description = 
 where_description = 
 where = 
-qc_path =
+qc_path = 
 
-[A11_Cellpose]
+[A1_Cellpose]
 z_slice = 3
-channel = [DAPI]
+channel = DAPI
 model_path = 
 alt_path = 
-test_fovs = 150,300,450
+test_fovs = 150,300,450,600
 
-[A12_SaveRawScanpy]
+[A2_SaveRawScanpy]
 # Leave this section empty: A12 should be completely hands off, will use params from A11
 
-[A21_HarmAnnotation]
+[B1_SaveRawScanpy]
+
+[Filter]
+remove_doublets = False
+min_counts = 5
+min_genes = 3
+
+[A4_HarmAnnotation]
 ref_path = 
-remove_doublets = True
+remove_doublets = False
 min_counts = 5
 min_genes = 3
 leiden_res = .3
 
-
+[QC1_postsegqc]
+bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
 
 ; # These tests exist to have something to easily test
 ; [z_AT_test1]
