--- a/snakefood.ini
+++ b/snakefood.ini
@@ -8,7 +8,7 @@
 [Run Info]
 description = Testing the segmentation of Ultra data
 where_description = Targeted selection of Ultra data
-where = "Experiment.name == '202501311118_BICANTraining_VMSC32010'"
+where = "Experiment.name == '202502281312_20250228M189BICANRen24_VMSC32110'"
 qc_path = _output/quality_control/
 
 [A1_Cellpose]
@@ -24,12 +24,12 @@ test_fovs = 150,300,450,600
 [B1_SaveRawScanpy]
 
 [Filter]
-remove_doublets = False
+remove_doublets = false
 min_counts = 5
 min_genes = 3
 
 [A4_HarmAnnotation]
-ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/CerebralCortex1.h5ad,/mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
+ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
 leiden_res = .3
 
 [QC1_postsegqc]
