up to date 03/24/2025

--- a/snakefood.default.ini
+++ b/snakefood.default.ini
@@ -55,6 +55,7 @@ min_genes = 3
 [A4_HarmAnnotation]
 ref_path = 
 leiden_res = .3
+celltype_key = Supercluster
 
 [QC1_postsegqc]
 bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
