--- a/snakefood.ini
+++ b/snakefood.ini
@@ -30,7 +30,8 @@ min_genes = 3
 
 [A4_HarmAnnotation]
 ref_path = /mnt/merfish18/BICAN/Reference_Data/Linnarsson/regions/BasalForebrain.h5ad
-leiden_res = .3
+leiden_res = 1
+celltype_key = Supercluster
 
 [QC1_postsegqc]
 bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
