--- a/snakefood.default.ini
+++ b/snakefood.default.ini
@@ -56,6 +56,7 @@ min_genes = 3
 ref_path = 
 leiden_res = .3
 celltype_key = Supercluster
+# Todo: add in spatial celltypes for spatial embedding highlight 
 
 [QC1_postsegqc]
 bulkref_path = /data/erboone/BICANReference/gene_reads_brain_cortex.gct
